<resources>
    <string name="app_name">高级记事本</string>
    <string name="note">记事</string>
    <string name="account">账户</string>
    <string name="phone">电话</string>
    <string name="help">帮助</string>
    <string name="back">返回</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="name">张梓彬</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
